--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -52,8 +52,8 @@ jobs:
           ls -la main-stats/
 
       - name: Report sizes
-        uses: chronotruck/webpack-stats-diff-action@1.0.0
+        uses: github/webpack-bundlesize-compare-action@v1.5.0
         with:
-          base_stats_path: 'main-stats/stats.json'
-          head_stats_path: 'stats.json'
+          base-stats-json-path: 'main-stats/stats.json'
+          current-stats-json-path: 'stats.json'
           token: ${{ secrets.GITHUB_TOKEN }}
