--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -16,11 +16,11 @@ jobs:
       - name: Install dependencies
         run: yarn install --frozen-lockfile
 
-      - name: Run linter
-        run: yarn lint
-
-      - name: Run tests
-        run: yarn test --maxWorkers=2
+#      - name: Run linter
+#        run: yarn lint
+#
+#      - name: Run tests
+#        run: yarn test --maxWorkers=2
 
       - name: Build code
         run: yarn build
@@ -36,6 +36,9 @@ jobs:
         with:
           name: sporran-extension-${{ github.sha }}
           path: dist/web-ext-artifacts/*
+
+      - name: BundleWatch
+        run: yarn run bundlewatch dist/**/*.*
 
       - name: Download previous stats
         env:
