--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "babel-jest": "^28.1.3",
     "babel-loader": "^8.2.5",
     "buffer": "^6.0.3",
+    "bundlewatch": "^0.3.3",
     "chrome-extension-i18n-shim": "^1.0.0",
     "chrome-launch": "^1.1.4",
     "copy-webpack-plugin": "^11.0.0",
