--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -38,6 +38,8 @@ jobs:
           path: dist/web-ext-artifacts/*
 
       - name: BundleWatch
+        env:
+          BUNDLEWATCH_GITHUB_TOKEN: ${{ secrets.BUNDLEWATCH_GITHUB_TOKEN }}
         run: yarn run bundlewatch dist/**/*.*
 
       - name: Download previous stats
