--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -40,5 +40,5 @@ jobs:
       - name: BundleWatch
         env:
           BUNDLEWATCH_GITHUB_TOKEN: ${{ secrets.BUNDLEWATCH_GITHUB_TOKEN }}
-          CI_BRANCH_BASE: bundlewatch
+          CI_BASE: master
         run: yarn run bundlewatch dist/**/*.*
