--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -40,11 +40,4 @@ jobs:
       - name: BundleWatch
         env:
           BUNDLEWATCH_GITHUB_TOKEN: ${{ secrets.BUNDLEWATCH_GITHUB_TOKEN }}
-          CI_BASE: master
-          GITHUB_BASE_REF: master
-          CI_BRANCH_BASE: master
-          GITHUB_HEAD_REF: master
-        run: |
-          export | grep main
-          export | grep bundlewatch
-          env GITHUB_BASE_REF="master" GITHUB_HEAD_REF="master" yarn run bundlewatch dist/**/*.*
+        run: yarn run bundlewatch dist/**/*.*
