--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -40,4 +40,4 @@ jobs:
       - name: BundleWatch
         env:
           BUNDLEWATCH_GITHUB_TOKEN: ${{ secrets.BUNDLEWATCH_GITHUB_TOKEN }}
-        run: env CI_BRANCH_BASE=master yarn run bundlewatch dist/**/*.*
+        run: env CI_BRANCH_BASE=master yarn run bundlewatch dist/**/*.* --max-size=4MB
