--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -25,6 +25,12 @@ jobs:
       - name: Build code
         run: yarn build
 
+      - name: BundleWatch
+        env:
+          BUNDLEWATCH_GITHUB_TOKEN: ${{ secrets.BUNDLEWATCH_GITHUB_TOKEN }}
+          CI_COMMIT_SHA: ${{ github.event.pull_request.head.sha }}
+        run: yarn run bundlewatch dist/**/*.* --max-size=2MB
+
       - name: Package extension
         run: yarn package
 
@@ -36,9 +42,3 @@ jobs:
         with:
           name: sporran-extension-${{ github.sha }}
           path: dist/web-ext-artifacts/*
-
-      - name: BundleWatch
-        env:
-          BUNDLEWATCH_GITHUB_TOKEN: ${{ secrets.BUNDLEWATCH_GITHUB_TOKEN }}
-          CI_COMMIT_SHA: ${{ github.event.pull_request.head.sha }}
-        run: env CI_BRANCH_BASE=master yarn run bundlewatch dist/**/*.* --max-size=4MB
