--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -30,6 +30,11 @@ jobs:
       - name: Build code
         run: yarn build
 
+      - name: Test size
+        env:
+          BUNDLEWATCH_GITHUB_TOKEN: ${{ secrets.BUNDLEWATCH_GITHUB_TOKEN }}
+        run: yarn run test-size
+
       - name: Package extension
         run: yarn package
 
