--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -25,6 +25,12 @@ jobs:
       - name: Build code
         run: yarn build
 
+      - name: Test size
+        env:
+          BUNDLEWATCH_GITHUB_TOKEN: ${{ secrets.BUNDLEWATCH_GITHUB_TOKEN }}
+          CI_COMMIT_SHA: ${{ github.event.pull_request.head.sha }}
+        run: yarn run test-size
+
       - name: Package extension
         run: yarn package
 
