--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dev-public": "env VARIANT=public NODE_ENV=development webpack --watch",
     "identity": "node -e \"console.log(require('@polkadot/util-crypto').mnemonicGenerate())\"",
     "test": "node --no-compilation-cache --expose-gc node_modules/.bin/jest --logHeapUsage",
+    "test-size": "bundlewatch --config bundlewatch.config.json",
     "lint": "yarn run lint-css && yarn run lint-js",
     "lint-js": "eslint --fix --max-warnings 0 --config ./.eslintrc.json \"src/**/*.ts*\"",
     "lint-css": "stylelint \"src/**/*.css\"",
@@ -101,6 +102,7 @@
     "babel-jest": "^28.1.3",
     "babel-loader": "^8.2.5",
     "buffer": "^6.0.3",
+    "bundlewatch": "^0.3.3",
     "chrome-extension-i18n-shim": "^1.0.0",
     "chrome-launch": "^1.1.4",
     "copy-webpack-plugin": "^11.0.0",
