--- a/package.json
+++ b/package.json
@@ -44,14 +44,14 @@
     "version": "BEFORE=$(jq --raw-output .version src/static/manifest.json) && AFTER=$(date +%Y.%-m.%-d) && grep --files-with-matches --recursive $BEFORE src | xargs sed --in-place \"s/$BEFORE/$AFTER/g\" && git checkout -b version-bump && git commit --all --message=\"Version $AFTER\""
   },
   "dependencies": {
-    "@kiltprotocol/core": "0.30.0-11",
-    "@kiltprotocol/did": "0.30.0-11",
-    "@kiltprotocol/messaging": "0.30.0-11",
-    "@kiltprotocol/types": "0.30.0-11",
-    "@kiltprotocol/utils": "0.30.0-11",
-    "@kiltprotocol/config": "0.30.0-11",
+    "@kiltprotocol/core": "0.29.0-rc.2",
+    "@kiltprotocol/did": "0.29.0-rc.2",
+    "@kiltprotocol/messaging": "0.29.0-rc.2",
+    "@kiltprotocol/types": "0.29.0-rc.2",
+    "@kiltprotocol/utils": "0.29.0-rc.2",
+    "@kiltprotocol/config": "0.29.0-rc.2",
     "@polkadot/keyring": "^10.1.7",
-    "@polkadot/types": "^9.0.0",
+    "@polkadot/types": "^9.4.3",
     "@polkadot/ui-shared": "^2.9.8",
     "@polkadot/util": "^10.1.7",
     "@polkadot/util-crypto": "^10.1.7",
