--- a/package.json
+++ b/package.json
@@ -44,12 +44,12 @@
     "version": "BEFORE=$(jq --raw-output .version src/static/manifest.json) && AFTER=$(date +%Y.%-m.%-d) && grep --files-with-matches --recursive $BEFORE src | xargs sed --in-place \"s/$BEFORE/$AFTER/g\" && git checkout -b version-bump && git commit --all --message=\"Version $AFTER\""
   },
   "dependencies": {
-    "@kiltprotocol/config": "0.29.0-rc.3",
-    "@kiltprotocol/core": "0.29.0-rc.3",
-    "@kiltprotocol/did": "0.29.0-rc.3",
-    "@kiltprotocol/messaging": "0.29.0-rc.3",
-    "@kiltprotocol/types": "0.29.0-rc.3",
-    "@kiltprotocol/utils": "0.29.0-rc.3",
+    "@kiltprotocol/config": "^0.29.0",
+    "@kiltprotocol/core": "^0.29.0",
+    "@kiltprotocol/did": "^0.29.0",
+    "@kiltprotocol/messaging": "^0.29.0",
+    "@kiltprotocol/types": "^0.29.0",
+    "@kiltprotocol/utils": "^0.29.0",
     "@polkadot/keyring": "^10.1.7",
     "@polkadot/types": "^9.4.3",
     "@polkadot/ui-shared": "^2.9.8",
