--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "@kiltprotocol/chain-helpers": "0.29.0",
+    "@kiltprotocol/config": "^0.29.0",
     "@kiltprotocol/core": "0.29.0",
     "@kiltprotocol/did": "0.29.0",
     "@kiltprotocol/messaging": "0.29.0",
