--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "lint-css": "stylelint \"src/**/*.css\"",
     "css": "tcm --namedExports --pattern 'src/**/*.module.css' && eslint --fix --config ./.eslintrc.json \"src/**/*.css.d.ts\"",
     "prettify": "prettier --write \"src/**/*.ts*\"",
-    "storybook": "start-storybook --port 6006 --modern",
+    "storybook": "NODE_OPTIONS=--openssl-legacy-provider start-storybook --port 6006 --modern",
     "open-firefox": "web-ext run --source-dir dist",
     "open-chrome": "node scripts/chrome-launch.js",
     "version": "BEFORE=$(jq --raw-output .version src/static/manifest.json) && AFTER=$(date +%Y.%-m.%-d) && grep --files-with-matches --recursive $BEFORE src | xargs sed --in-place \"s/$BEFORE/$AFTER/g\" && git checkout -b version-bump && git commit --all --message=\"Version $AFTER\""
