--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,9 @@
   "settings": {
     "react": {
       "version": "detect"
+    },
+    "import/resolver": {
+      "typescript": {}
     }
   }
 }
