--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
     "identity": "node -e \"console.log(require('@polkadot/util-crypto').mnemonicGenerate())\"",
     "test": "node --no-compilation-cache --expose-gc node_modules/.bin/jest --logHeapUsage",
     "test-size": "bundlewatch --config bundlewatch.config.json",
-    "lint": "yarn run lint-css && yarn run lint-js",
+    "lint": "yarn run lint-css --formatter github && yarn run lint-js",
     "lint-js": "eslint --fix --max-warnings 0 --config ./.eslintrc.json \"src/**/*.ts*\"",
-    "lint-css": "stylelint \"src/**/*.css\"",
+    "lint-css": "stylelint --fix --max-warnings 0 \"src/**/*.css\"",
     "css": "tcm --namedExports --pattern 'src/**/*.module.css' && eslint --fix --config ./.eslintrc.json \"src/**/*.css.d.ts\"",
-    "prettify": "prettier --write \"src/**/*.ts*\"",
+    "prettify": "prettier --write \"src/**/*.ts*\" \"src/**/*.css*\"",
     "storybook": "NODE_OPTIONS=--openssl-legacy-provider start-storybook --port 6006 --modern",
     "open-firefox": "web-ext run --source-dir dist",
     "open-chrome": "node scripts/chrome-launch.js",
