--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "identity": "node -e \"console.log(require('@polkadot/util-crypto').mnemonicGenerate())\"",
     "test": "node --no-compilation-cache --expose-gc node_modules/.bin/jest --logHeapUsage",
     "test-size": "bundlewatch --config bundlewatch.config.json",
-    "lint": "yarn run lint-css --formatter github && yarn run lint-js",
+    "lint": "yarn run lint-css --formatter github && yarn run lint-js --format github-actions",
     "lint-js": "eslint --fix --max-warnings 0 --config ./.eslintrc.json \"src/**/*.ts*\"",
     "lint-css": "stylelint --fix --max-warnings 0 \"src/**/*.css\"",
     "css": "tcm --namedExports --pattern 'src/**/*.module.css' && eslint --fix --config ./.eslintrc.json \"src/**/*.css.d.ts\"",
@@ -111,6 +111,7 @@
     "dialog-polyfill": "^0.5.6",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.7.0",
+    "eslint-formatter-github-actions": "^1.1.0",
     "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.1",
